--- a/app/views/application_groups/_group_panel.html.erb
+++ b/app/views/application_groups/_group_panel.html.erb
@@ -53,11 +53,11 @@
       </dl>
     <% end %>
     <% if application_group.applicants.size < 2 %>
-      <%= link_to(applicant_links_application_group_path) do %>
+      <%= link_to(application_group_applicants_path) do %>
         <p>There is 1 person in this <%= "group" %></p>
       <% end %>
     <% else %>
-      <p><%= "There are #{ application_group.applicants.size } people in this #{ link_to 'group', application_group_path(application_group) }" %></p>
+      <p><%= "There are #{ application_group.active_applicants.size } people in this #{ link_to 'group', application_group_applicants_path(application_group) }" %></p>
     <% end %>
   </div>
 </div>
