--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,11 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require custom_bootstrap/custom_bootstrap
  *= require font-awesome
- *= require twitter/bootstrap
- *= require bootstrap_and_overrides
- *= require flatuipro
- *= require flatuipro_overrides
+ *= require jquery-ui
  *= require highlight/default
  *= require_tree .
  */
